fix expand and collapse all buttons to resemble delta site

--- a/us/en/skymiles/blocks/accordion/accordion.css
+++ b/us/en/skymiles/blocks/accordion/accordion.css
@@ -165,6 +165,10 @@
     background: none;
 }
 
+.accordion-wrapper [role="group"] button:disabled {
+    display: none;
+}
+
 .accordion .tertiary.highlight {
     color: var(--link-color);
 }
